--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
   background: #fff;
   color: #666666;
   font-family: "Open Sans", sans-serif;
+  margin-bottom: -100px;
 }
 
 a {
@@ -174,7 +175,7 @@ h6 {
 #header #logo h1 a:hover {
   color: #fff;
   padding-left: 10px;
-  border-left: 4px solid #18d26e;
+  /* border-left: 4px solid #18d26e; */
 }
 
 #header #logo img {
@@ -182,6 +183,9 @@ h6 {
   margin: 0;
 }
 
+#header a {
+  text-decoration: none;
+}
 /*--------------------------------------------------------------
 # Intro Section
 --------------------------------------------------------------*/
@@ -836,11 +840,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #projects .projects-wrap {
   box-shadow: 15px 15px 1px 1px rgba(0, 0, 0, 0.08);
-  transition: 0.3s;
+  transition: 0.1s;
 }
 
 #projects .projects-wrap:hover {
   box-shadow: 15px 15px 1px 1px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
 }
 
 #projects .projects-item {
